[package]
name = "starlight-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
starlight-protocol = { path = "../starlight-protocol" }
axum = "0.8"
tower = { version = "0.5", features = ["make", "util", "filter"] }
tower-http = { version = "0.6", features = ["full"] }

# Metrics
opentelemetry-instrumentation-tower = { version = "0.17", features = ["axum"], default-features = false }

# Tracing
tracing = "0.1"
tracing-appender = "0.2"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "env-filter", "fmt", "json", "env-filter", "tracing-log"] }

opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["trace", "rt-tokio", "metrics", "logs", "spec_unstable_metrics_views"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
opentelemetry-appender-tracing = { version = "0.31", features = ["experimental_use_tracing_span_context"] }
opentelemetry-semantic-conventions = { version = "0.31", features = ["semconv_experimental"] }
opentelemetry-http = "0.31"

time = { version = "0.3", features = ["local-offset", "macros", "serde-human-readable", "serde-well-known"] }
time-tz = { version = "3.0.0-rc.5.0.0", features = ["system"] }
ansi_term = "0.12"
dotenv = "0.15"
http-body-util = "0.1"
uuid = "1.19"
headers = "0.4"